@@ -1,3 +1,10 @@
+2005-12-09  Jorn Baayen  <jorn@openedhand.com>
+
+	* gconf/gconf-internals.h:
+	* gconf/gconf-value.h:
+	Publicize gconf_value_compare() and gconf_entry_equal().
+	Closes bug #322832.
+
 2005-12-09  Mark McLoughlin  <mark@skynet.ie>
 
 	* configure.in: post-branch bump to 2.13.1
